--- a/serverless.yml
+++ b/serverless.yml
@@ -26,7 +26,7 @@ provider:
 
 functions:
   checkPrincipalAllowed:
-    description: Check if actions assigned to an IAM user, role, or group are allowed
+    description: Check if actions assigned to an IAM users, roles, or groups are allowed
     handler: handler.canary_test_allowed
     package:
       include:
@@ -35,10 +35,9 @@ functions:
     events:
       - schedule: rate(1 minute)
     environment:
-      source_arn: arn:aws:iam::111111111111:role/Admin # Change this to test principal arn
-      action_names: ec2:RunInstances,imagebuilder:CreateImagePipeline # Change this to your comma separated list of actions 
+      principals_actions_json: '{"arn:aws:iam::111111111111:role/Admin":"ec2:RunInstances"}' # Change this to match your environment 
   checkPrincipalDenied:
-    description: Check if actions assigned to an IAM user, role, or group are denied
+    description: Check if actions assigned to an IAM users, roles, or groups are denied
     handler: handler.canary_test_denied
     package:
       include:
@@ -47,8 +46,7 @@ functions:
     events:
       - schedule: rate(1 minute)
     environment:
-      source_arn: arn:aws:iam::111111111111:role/Admin # Change this to test principal arn
-      action_names: ec2:RunInstances,imagebuilder:CreateImagePipeline # Change this to your comma separated list of actions 
+      principals_actions_json: '{"arn:aws:iam::111111111111:role/Read":"ec2:RunInstances"}' # Change this to match your environment
 
 custom:
   alerts:
