--- a/serverless.yml
+++ b/serverless.yml
@@ -35,7 +35,7 @@ functions:
     events:
       - schedule: rate(1 minute)
     environment:
-      principals_actions_json: '{"arn:aws:iam::111111111111:role/Admin":"ec2:RunInstances"}' # Change this to match your environment 
+      principals_actions_json: '{"arn:aws:iam::111111111111:role/Admin":"ec2:RunInstances"}' # Change this to match your requirements 
   checkPrincipalDenied:
     description: Check if actions assigned to an IAM users, roles, or groups are denied
     handler: handler.canary_test_denied
@@ -46,7 +46,7 @@ functions:
     events:
       - schedule: rate(1 minute)
     environment:
-      principals_actions_json: '{"arn:aws:iam::111111111111:role/Read":"ec2:RunInstances"}' # Change this to match your environment
+      principals_actions_json: '{"arn:aws:iam::111111111111:role/Read":"ec2:RunInstances"}' # Change this to match your requirements
 
 custom:
   alerts:
